# cargos-loading-API

./: Makefile  README.md  config.py  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
cargo_app/: main.py
cargo_app/api/v1/routes/: cargos.py
cargo_app/services/: cargos.py
cargo_app/validation/: schemas.py
tests/: fixtures.py  test_cargos.py
